archive: 保存 AICoding 评测 0923 的本地改动
将会话合并实现、相关界面调整和评测报告留在独立分支，避免继续堆在 main 上。

Co-authored-by: Cursor <cursoragent@cursor.com>